refactor: melhora logica e incrimenta alguns validacoes